--- a/makewiki/templates/base.html
+++ b/makewiki/templates/base.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ <!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -21,7 +21,7 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <!-- CHALLENGE: Replace # with the url template tag. -->
-            <a class="nav-link" href="/wiki/">📓 Pages <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="{% url "wiki-list-page" %}">📓 Pages <span class="sr-only">(current)</span></a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
